--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.5.1",
         "classnames": "^2.3.2",
         "next": "^13.4.19",
         "react": "^18.2.0",
@@ -25,6 +26,7 @@
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^13.4.19",
+        "@types/axios": "^0.14.0",
         "@types/node": "20.6.0",
         "@types/react": "^18.2.21",
         "@types/react-dom": "^18.2.7",
