--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "next": "^13.4.19",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "reactflow": "^11.9.3",
         "serve": "^14.2.1"
     },
     "devDependencies": {
