--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.7",
         "axios": "^1.5.1",
         "classnames": "^2.3.2",
         "next": "^13.4.19",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
         "reactflow": "^11.9.3",
         "serve": "^14.2.1"
     },
