--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "next dev",
         "build": "next build && next export",
-        "start": "serve out",
+        "start": "http-server out -p 3000",
         "format:check": "prettier . --check",
         "format:write": "prettier . --write",
         "lint:check": "eslint .",
@@ -20,12 +20,12 @@
         "@reduxjs/toolkit": "^1.9.7",
         "axios": "^1.5.1",
         "classnames": "^2.3.2",
+        "http-server": "^14.1.1",
         "next": "^13.4.19",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
-        "reactflow": "^11.9.3",
-        "serve": "^14.2.1"
+        "reactflow": "^11.9.3"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^13.4.19",
